update demo and docs folder
